# packrat

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  packrat.ini.sample  packrat.py  setup.py
cmake/: FindSTEAMWORKS.cmake
proto/: base_gcmessages.proto  cstrike15_usermessages.proto  econ_gcmessages.proto  gcsdk_gcmessages.proto  gcsystemmsgs.proto  htmlmessages.proto  netmessages.proto
src/: .clang-format  BoilerException.cpp  BoilerException.h  CSGOClient.cpp  CSGOClient.h  CSGOMatchList.cpp  CSGOMatchList.h  GCMsgHandler.h  format_sources  main.cpp
